# dog-arm

./: .gitignore  source_red_block.sh
Log/: OrbbecSDK.log.txt
config_runtime/: red_color_calib_tuned.yaml
src/red_block_grasp_ros2/: README.md  package.xml  setup.cfg  setup.py
src/red_block_grasp_ros2/config/: red_color_calib.yaml
src/red_block_grasp_ros2/launch/: localization_only.launch.py  open_loop_grasp.launch.py  red_block_task.launch.py  visual_servo_task.launch.py
src/red_block_grasp_ros2/red_block_grasp_ros2/core/: camera_orbbec.py  camera_rgbd_orbbec.py  color_red_block_detector.py  target_localizer.py  yolo_detector.py  yolo_detector_backup_20260502_022934_before_imgsz.py
src/red_block_grasp_ros2/red_block_grasp_ros2/nodes/: execution_logger_node.py  open_loop_grasp_task_node.py  roarm_driver_node.py  target_localizer_node.py  target_localizer_node_backup_20260502_014403_before_state_sub.py  target_localizer_node_backup_20260502_024149_before_lock_filter.py  target_localizer_node_backup_20260502_030037_before_hard_sample.py  target_localizer_node_backup_20260502_030717_before_force_sample.py  task_manager_node.py  task_manager_node_backup_20260502_021728_before_direct_move.py  visual_servo_task_node.py  visual_servo_task_node_backup_20260502_025241_before_e_pixel_servo.py  yolo_camera_node.py
src/red_block_grasp_ros2/red_block_grasp_ros2/roarm_m3/: __init__.py  driver.py
src/red_block_grasp_ros2/red_block_grasp_ros2/tools/: calibrate_red_threshold.py
src/red_block_grasp_ros2/tools/: calibrate_red_threshold.py
tools/: biaozhu  openmix  (+5 more)
(+4 files in other folders)
